# gulp_mlips

./: .gitignore  README.md  pyproject.toml
examples/: custom_backend_template.py
examples/gulp/: .gitignore  README.md  run_example.py
examples/gulp/al2o3/: README.md  optimize.gin  run.sh
examples/gulp/benzene/: README.md  optimize.gin  run.sh  single_point.gin
examples/gulp/gfnff/: README.md  optimize.gin  run.sh
examples/gulp/si_diamond/: README.md  optimize.gin  run.sh
examples/gulp/uma/: README.md  gulp_mlips_wrapper.sh  optimize.gin  run.sh
src/gulp_mlips/: __init__.py  client.py  host.py  init_models.py
src/gulp_mlips/backends/: __init__.py  base.py  fairchem.py  gfnff.py  gulp.py  petmad.py
src/gulp_mlips/formats/: __init__.py  drv.py  readers.py
