[project]
name = "gulp-mlips"
version = "0.1.0"
description = "GULP-compatible calculator interface for Machine Learning Interatomic Potentials (MLIPs)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.22.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
petmad = ["pet-mad>=1.4.3"]
fairchem = [
    "fairchem-core>=1.0.0",
    "huggingface-hub>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "pet-mad>=1.4.3",
    "fairchem-core>=1.0.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
gulp-mlips-host = "gulp_mlips.host:main"
gulp-mlips-client = "gulp_mlips.client:main"
gulp-mlips-init = "gulp_mlips.init_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gulp_mlips"]
